responsive: fix spacing and font

--- a/src/documents/assets/css/home.css.styl
+++ b/src/documents/assets/css/home.css.styl
@@ -68,6 +68,7 @@ h2
     font-weight normal
     color       grey-06
     font-size   1.5em
+    line-height 1.3
 
     @media (max-width: 425px)
         font-size 1.25em
@@ -97,7 +98,7 @@ section
     margin 4em 0
 
     @media (max-width: 425px)
-        margin 3em 0
+        margin 2em 0
 
 input
     border: 1px solid lightblue
@@ -187,7 +188,7 @@ main
         padding 4em
 
     @media (max-width: 425px)
-        padding 1em
+        padding 3em 1em
 
     a.button
         display         block
@@ -333,10 +334,13 @@ main
     background      white
 
     @media (max-width: 425px)
-        padding .5em 1em
+        padding 1em
 
     img
         height 2em
+
+        @media (max-width: 425px)
+            height 1.5em
 
     ul
         list-style-type none
